[package]
name = "rusty-pdf"
version = "0.1.0"
authors = ["Your Name"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", 
  "CanvasRenderingContext2d", "HtmlCanvasElement", "Document", "Element"
]
